# atlassian-buddy

./: .atlassian_buddy.toml.example  .gitignore  .spike.toml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
atlassian_buddy/: config.py  confluence.py  jira.py  server.py  templates.py
tests/: conftest.py  test_config.py  test_confluence_client.py  test_confluence_converters.py  test_jira_client.py  test_jira_converters.py  test_server.py  test_templates.py
